# modern-work-dev-server

./: .gitignore  README.md  azure.yaml
.github/: copilot-instructions.md
docs/: architecture.md  prerequisites.md  rdp-bridge-components.md  rdp-bridge-sequences.md  setup-flow-walkthrough.md  troubleshooting.md
hooks/: build-rdp-bridge.ps1  generate-rdp.ps1  postprovision.ps1  preprovision.ps1  upload-scripts.ps1
infra/compute/: main.bicep
infra/compute/modules/: container-app.bicep  extensions-script.ps1.tpml  network.bicep  vm-extension.bicep  vm.bicep
infra/landingzone/: main.bicep
infra/storage/: main.bicep
rdp-bridge/: Cargo.toml  Dockerfile
rdp-bridge/src/: auth.rs  azure_vm.rs  config.rs  gateway.rs  main.rs  protocol.rs  telemetry.rs  tunnel.rs
scripts/: README.txt  SP-Exchange-Coexistence-Issues.md  Start-Setup.ps1  bootstrap.ps1
scripts/config/: sp-farm-config.json  vs-workloads.json  winget-packages.json
scripts/helpers/: Common.ps1  Download-FromBlob.ps1  Sync-AzureShare.ps1  Wait-ForReboot.ps1
scripts/phases/: 01-InitDisks.ps1  02-DownloadISOs.ps1  03-PromoteADDC.ps1  04-ConfigureDNS.ps1  05-CreateServiceAccounts.ps1  06-InstallSQLServer.ps1  07-ConfigureSQLServer.ps1  08-InstallSPPrereqs.ps1  09-InstallSPBinaries.ps1  10-ConfigureSPFarm.ps1  11-CreateSPWebApp.ps1  12-InstallVS2026.ps1  13-FinalConfig.ps1  14-InstallExchangePrereqs.ps1  15-InstallExchange.ps1  16-ConfigureExchange.ps1  17-InstallVS2026.ps1  18-FinalConfig.ps1  19-InstallOptionalSoftware.ps1  20-FixSPExchangeCoexistence.ps1  21-SeedAccountsAndMailboxes.ps1
