[package]
name = "rdp-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
bytes = "1"
byteorder = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
tracing-opentelemetry = "0.28"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "http-proto", "reqwest-client"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
tower-http = { version = "0.5", features = ["trace"] }
futures-util = "0.3"
